# nerikiri

./: .gitignore  .gitmodules  CMakeLists.txt
apps/: CMakeLists.txt  create_container_pkg.cpp  juiz_create_component.cpp  juizd.cpp  nkd.cpp
example/: CMakeLists.txt  MyStruct.cpp  MyStruct.h  MyStruct_addInt.cpp  MyStruct_intGetter.cpp  TimerEC.cpp  add.cpp  brokers.jshelf  brokers.nkshelf  container_posed_turtlesim.nkproj  decrement.cpp  demo.jproj  demo.nkproj  ecs.nkshelf  example01.cpp  example02.cpp  example03.cpp  example04.cpp  example05.cpp  example06.cpp  example07.cpp  example08.cpp  example09.cpp  example10.cpp  increment.cpp  joy.nkproj  keyjoy.nkproj  nk.json  nkd.nkproj  one.cpp  opencv.nkproj  turtle_sim.cpp  turtle_sim.nkproj  turtlesim.nkproj  turtlesim_keyteleop.nkproj  zero.cpp
example/DemoBehaviour/: CMakeLists.txt  DemoBehaviour.cpp  DemoBehaviour.h  DemoBehaviour_getPose.cpp  DemoBehaviour_start.cpp  DemoBehaviour_update.cpp  demobehaviour.jproj  demobehaviour.jshelf  demobehaviour.nkproj  demobehaviour.nkshelf  poseRotate.cpp
example/container_posed_turtlesim/: CMakeLists.txt  TurtleSim.cpp  TurtleSim_kill.cpp  TurtleSim_odomTransform.cpp  TurtleSim_spawn.cpp  turtle_sim.html  turtlesim.nkproj  turtlesim.nkshelf
example/container_template/: CMakeLists.txt  ContainerName.cpp  ContainerName.h  ContainerName_containerOperationName.cpp  ContainerName_operationName.cpp  containername.jshelf  containername.nkshelf  juiz_component.cmake  operationName.cpp
example/containers/: MyStruct_addInt.cpp
example/containers/JoyController/: JoyController.cpp  JoyController_get.cpp  JoyController_initialize.cpp  JoyController_update.cpp
example/containers/MyStruct/: MyStruct.cpp  MyStruct_addInt.cpp  MyStruct_intGetter.cpp
example/containers/OpenCVCamera/: OpenCVCamera.cpp  OpenCVCamera_capture.cpp  OpenCVCamera_initialize.cpp
example/containers/TurtleSim/: TurtleSim.cpp  TurtleSim_getPose.cpp  TurtleSim_kill.cpp  TurtleSim_setVelocity.cpp  TurtleSim_spawn.cpp  TurtleSim_update.cpp
example/joy/: CMakeLists.txt  JoyController.cpp  JoyController.h  JoyController_get.cpp  JoyController_initialize.cpp  JoyController_update.cpp  KeyboardJoy.cpp  KeyboardJoy.h  KeyboardJoy_get.cpp  KeyboardJoy_initialize.cpp  KeyboardJoy_update.cpp  joy.nkshelf  joy2turtlevel.cpp  keyjoy.nkproj
example/opencv/: CMakeLists.txt  OpenCVCamera.cpp  OpenCVCamera.h  OpenCVCamera_capture.cpp  OpenCVCamera_initialize.cpp  OpenCVCascadeClassifier.cpp  OpenCVCascadeClassifier.h  OpenCVCascadeClassifier_detectMultiScale.cpp  OpenCVCascadeClassifier_initialize copy.cpp  OpenCVCascadeClassifier_initialize.cpp  cv_drawRects.cpp  cv_flip.cpp  opencv.nkproj  opencv.nkshelf
example/operations/: add.cpp  decrement.cpp  increment.cpp  joy2turtlevel.cpp  one.cpp  zero.cpp
example/simple_example/: CMakeLists.txt  MyStruct.cpp  MyStruct_addInt.cpp  MyStruct_intGetter.cpp  add.cpp  decrement.cpp  increment.cpp  one.cpp  zero.cpp
example/turtlesim/: CMakeLists.txt  TurtleSim.cpp  TurtleSim.h  TurtleSim_getPose.cpp  TurtleSim_kill.cpp  TurtleSim_setVelocity.cpp  TurtleSim_spawn.cpp  TurtleSim_update.cpp  turtlesim.nkproj  turtlesim.nkshelf
include/juiz/: CMakeLists.txt  broker_api.h  client_proxy_api.h  connection.h  connection_api.h  connection_proxy.h  container.h  container_api.h  crud_broker.h  crud_broker_proxy_api.h  crud_broker_proxy_base.h  ec.h  ec_api.h  factory_api.h  geometry.h  juiz.h  logger.h  model_data.h  object.h  operation.h  operation_api.h  path_parser.h  process.h  process_api.h  process_store.h  systemeditor.h  topic.h  topic_api.h  value.h
include/juiz/utils/: CMakeLists.txt  argparse.h  dllproxy.h  functional.h  json.h  naming.h  os.h  signal.h  stringutil.h  yaml.h
share/juiz/: CMakeLists.txt  brokers.jshelf  ecs.jshelf
share/juiz/component_template/: CMakeLists.txt  ComponentName.jshelf  ComponentName.jshelf.in  ContainerName.cpp  ContainerName.h  ContainerName_containerOperationName.cpp  containername.nkshelf  (+2 more)
src/: CMakeLists.txt  broker.cpp  brokerdictionary.cpp  brokerinfo.cpp  brokerselector.cpp  connection.cpp  connectionbuilder.cpp  connectiondictionary.cpp  container.cpp  dllproxy.cpp  ec.cpp  logger.cpp  moduleloader.cpp  null_connection.cpp  object.cpp  objectfactory.cpp  objectmapper.cpp  operation.cpp  operationinfo.cpp  process.cpp  process_store.cpp  route.cpp  signal.cpp  state.cpp  statemap.cpp  value.cpp  valuemap.cpp
src/brokers/: CMakeLists.txt  broker.cpp  corebroker.cpp
src/datatype/: base64.c  json.cpp
src/ecs/: CMakeLists.txt  OneShotEC.cpp  TimerEC.cpp
src/http/: client.cpp  httpbroker.cpp  restbroker.cpp  server.cpp
src/lib/: CMakeLists.txt  argparse.h  base64.c  factory_api.cpp  logger.cpp  naming.cpp  object.cpp  objectfactory.cpp  objectfactory.h  os.cpp  proxy_builder.cpp  signal.cpp  value.cpp
src/nerikiri/: CMakeLists.txt  base64.h  broker.cpp  broker_proxy_api.cpp  brokerfactory.cpp  connection.cpp  connection_builder.cpp  connection_proxy.cpp  connectionbuilder.cpp  connectiondictionary.cpp  container.cpp  container_api.cpp  container_factory_base.cpp  corebroker.cpp  crud_broker.cpp  crud_broker_base.cpp  dllproxy.cpp  ec.cpp  factory_api.cpp  fsm.cpp  json.cpp  logger.cpp  moduleloader.cpp  naming.cpp  object.cpp  object_mapper.cpp  objectfactory.cpp  objectfactory.h  objectmapper.cpp  operation.cpp  operation_api.cpp  operation_base.cpp  operation_inlet_api.cpp  operation_outlet_api.cpp  operation_proxy.cpp  os.cpp  process.cpp  process_builder.cpp  process_store.cpp  processconfigparser.cpp  (+4 more)
src/systemeditor/: systemeditor.cpp
test/: CMakeLists.txt  argparse_test.cpp  catch.hpp  connection_test.cpp  container_test.cpp  ec_test.cpp  fsm_test.cpp  geometry_test.cpp  http_test.cpp  httpbroker_test.cpp  nk.json  nk_container_test.json  nk_ec_remote_test.json  nk_ec_test.json  nk_ec_test_plain.json  nk_operation_test.json  nk_process_operation_test.json  nk_process_test.json  operation_test.cpp  operations_for_tests.h  option_test.cpp  process_test.cpp  topic_test.cpp  value_test.cpp  wsbroker_test.cpp  yaml_test.cpp
(+293 files in other folders)
