cmake_minimum_required(VERSION 3.5)

# add_compile_options(-std=gnu++17)
set(NERIKIRI_VERSION 0.0.1)
set(NERIKIRI_VERSION_MAJOR 0)
set(NERIKIRI_VERSION_MINOR 0)
set(NERIKIRI_VERSION_SUBMINOR 1)

if (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
#  set(CMAKE_C_COMPILER "gcc")
  set(CMAKE_C_COMPILER "clang")
#  set(CMAKE_CXX_COMPILER "g++")
  set(CMAKE_CXX_COMPILER "clang++")
endif()

project(nerikiri LANGUAGES CXX C VERSION ${NERIKIRI_VERSION})

enable_testing()

option(BUILD_NK_EXAMPLE "Build Example" OFF)
option(BUILD_NK_TEST "Build Nerikiri's Test" OFF)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)



set(CMAKE_USE_RELATIVE_PATHS True)
add_subdirectory(thirdparty)

add_subdirectory(include)
add_subdirectory(src)
add_subdirectory(example)
add_subdirectory(apps)
add_subdirectory(test)

set_target_properties(${PROJECT_NAME} PROPERTIES PUBLIC_HEADER "${nk_public_headers}")
set(INCLUDE_INSTALL_DIR include/ )
set(RUNTIME_INSTALL_DIR bin/ )
set(LIB_INSTALL_DIR lib/ )
set(SYSCONFIG_INSTALL_DIR etc/${PROJECT_NAME}/ )

INSTALL(TARGETS ${PROJECT_NAME}
        RUNTIME DESTINATION ${RUNTIME_INSTALL_DIR}
        LIBRARY DESTINATION ${LIB_INSTALL_DIR}
        PUBLIC_HEADER DESTINATION include/${PROJECT_NAME})

include(CMakePackageConfigHelpers)
configure_package_config_file(cmake/${PROJECT_NAME}Config.cmake.in
  ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}Config.cmake
  INSTALL_DESTINATION ${LIB_INSTALL_DIR}/${PROJECT_NAME}/cmake
  PATH_VARS INCLUDE_INSTALL_DIR SYSCONFIG_INSTALL_DIR LIB_INSTALL_DIR)

write_basic_package_version_file(
        ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}ConfigVersion.cmake
        VERSION ${NERIKIRI_VERSION}
        COMPATIBILITY SameMajorVersion )

install(FILES ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}Config.cmake
        ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}ConfigVersion.cmake
  DESTINATION ${LIB_INSTALL_DIR}/${PROJECT_NAME}/cmake )

set(CPACK_GENERATOR WIX)
set(CPACK_PACKAGE_NAME ${PROJECT_NAME})
set(CPACK_PACKAGE_VENDOR "SUGAR SWEET ROBOTICS")
set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "nerikiri - A robot middleware")
set(CPACK_PACKAGE_VERSION ${NERIKIRI_VERSION})
set(CPACK_PACKAGE_VERSION_MAJOR ${NERIKIRI_VERSION_MAJOR})
set(CPACK_PACKAGE_VERSION_MINOR ${NERIKIRI_VERSION_MINOR})
set(CPACK_PACKAGE_VERSION_PATCH ${NERIKIRI_VERSION_SUBMINOR})
set(CPACK_PACKAGE_INSTALL_DIRECTORY "nerikiri")
SET(CPACK_NSIS_MODIFY_PATH ON)

INCLUDE(CPack)
